- Added homescreen widget - Updated to use material theme colors - Solved bugs with design file

--- a/CalculatorApp/app/src/main/res/values/strings.xml
+++ b/CalculatorApp/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="divide">Divide</string>
     <string name="delete">Delete</string>
     <string name="multiply">multiply</string>
+    <string name="minus">minus</string>
+    <string name="calculator">Calculator</string>
+    <string name="search">Search</string>
+    <string name="pin">pin</string>
+    <string name="pinned">Pinned</string>
 </resources>
